# Beam-Textiles-Backend

./: .gitignore  clear_data.py  pyproject.toml  requirements.txt  seed.py  vercel.json
erp_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
erp_core/: __init__.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
erp_core/management/commands/: setup_admin.py
erp_core/migrations/: 0001_initial.py  0002_account_is_bank.py  0003_profile_activitylog.py
